# scape

./: .clang-format  .gitmodules  .hgignore  CMakeLists.txt  LICENSE  Readme.md  Scape.sln
Barebone/: BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  TutorialApplication.cpp  TutorialApplication.h
Editor/: CMakeLists.txt  Editor.vcproj
Editor/Application/: Application.cpp  Application.h
Editor/Controls/: PGDragCtrlEditor.cpp  PGDragCtrlEditor.h
Editor/PCH/: stdafx.cpp  stdafx.h
Editor/Resources/: Editor.rc  resource.h
Editor/Utils/: Utils.cpp  Utils.h
Editor/Windows/: FileExportDialog.cpp  FileExportDialog.h  FileImportOptionsDialog.cpp  FileImportOptionsDialog.h  FileImportTypeDialog.cpp  FileImportTypeDialog.h  MainFrame.cpp  MainFrame.h  RenderPanel.cpp  RenderPanel.h  UIElementLayerPanel.cpp  UIElementLayerPanel.h  UIElementPresetPanel.cpp  UIElementPresetPanel.h  UIElementPropertyGrid.cpp  UIElementPropertyGrid.h  UIElementToolBar.cpp  UIElementToolBar.h
Engine/: CMakeLists.txt  Engine.vcproj  ScapeEnginePlatform.h  ScapeEnginePrerequisites.h  ScapeEngineStableHeaders.h
Engine/EngineCore/: CameraController.cpp  CameraController.h  Console.cpp  Console.h  EngineCore.cpp  EngineCore.h  EngineInterface.cpp  EngineInterface.h  HeightfieldManager.cpp  HeightfieldManager.h  LegacySettingsDatasetDataAccessObject.cpp  LegacySettingsDatasetDataAccessObject.h  QtJSONSettingsDatasetDataAccessObject.cpp  QtJSONSettingsDatasetDataAccessObject.h  QtJSONStartupSettingsDataAccessObject.cpp  QtJSONStartupSettingsDataAccessObject.h  RenderView.cpp  RenderView.h  RenderViewManager.cpp  RenderViewManager.h  SettingsDataset.cpp  SettingsDataset.h  SettingsDatasetDataAccessObject.cpp  SettingsDatasetDataAccessObject.h  SettingsDatasetManager.cpp  SettingsDatasetManager.h  SkySettings.cpp  SkySettings.h  StartupSettings.cpp  StartupSettings.h  StartupSettingsDataAccessObject.cpp  StartupSettingsDataAccessObject.h  Tickable.cpp  Tickable.h  TickableManager.cpp  TickableManager.h  UIElementClasses.cpp  UIElementClasses.h
Engine/GPU2DOperation/: GPU2DOperation.cpp  GPU2DOperation.h  GPU2DOperationManager.cpp  GPU2DOperationManager.h  GPU2DOperationQuad.cpp  GPU2DOperationQuad.h  GPU2DOperationQuadBrush.cpp  GPU2DOperationQuadBrush.h  GPU2DOperationQuadCustom.cpp  GPU2DOperationQuadCustom.h  GPU2DOperationRenderableQuad.cpp  GPU2DOperationRenderableQuad.h  GPU2DOperationRenderableQuadManager.cpp  GPU2DOperationRenderableQuadManager.h
Engine/HeightfieldBrush/: HeightfieldBrush.cpp  HeightfieldBrush.h  HeightfieldBrushManager.cpp  HeightfieldBrushManager.h  HeightfieldBrushSettings.cpp  HeightfieldBrushSettings.h  HeightfieldBrushState.cpp  HeightfieldBrushState.h
Engine/HeightfieldBuffer/: HeightfieldBuffer.cpp  HeightfieldBuffer.h  HeightfieldBufferPage.cpp  HeightfieldBufferPage.h  HeightfieldBufferSet.cpp  HeightfieldBufferSet.h  HeightfieldBufferSetManager.cpp  HeightfieldBufferSetManager.h
Engine/HeightfieldFileCodecs/: HeightfieldFileDecoder.h  HeightfieldFileDecoderImage.cpp  HeightfieldFileDecoderImage.h  HeightfieldFileDecoderManager.cpp  HeightfieldFileDecoderManager.h  HeightfieldFileDecoderRaw.cpp  HeightfieldFileDecoderRaw.h  HeightfieldFileEncoder.h  HeightfieldFileEncoderImage.cpp  HeightfieldFileEncoderImage.h  HeightfieldFileEncoderManager.cpp  HeightfieldFileEncoderManager.h  HeightfieldFileEncoderRaw.cpp  HeightfieldFileEncoderRaw.h  HeightfieldFileEncoderUnrealBMPG16.cpp  HeightfieldFileEncoderUnrealBMPG16.h
Engine/HeightfieldGeom/: HeightfieldGeom.cpp  HeightfieldGeom.h  HeightfieldGeomManager.cpp  HeightfieldGeomManager.h  HeightfieldGeomMaterial.cpp  HeightfieldGeomMaterial.h  HeightfieldGeomMaterialSplat.cpp  HeightfieldGeomMaterialSplat.h  HeightfieldGeomTile.cpp  HeightfieldGeomTile.h  HeightfieldGeomTileBufferFactory.cpp  HeightfieldGeomTileBufferFactory.h  HeightfieldGeomTileIndexBufferManager.cpp  HeightfieldGeomTileIndexBufferManager.h  HeightfieldGeomTileVertexUVBufferManager.cpp  HeightfieldGeomTileVertexUVBufferManager.h
Engine/HeightfieldOperation/: HeightfieldOperation.cpp  HeightfieldOperation.h  HeightfieldOperationBrush.cpp  HeightfieldOperationBrush.h  HeightfieldOperationBrushBase.cpp  HeightfieldOperationBrushBase.h  HeightfieldOperationCPU.cpp  HeightfieldOperationCPU.h  HeightfieldOperationCPUBrush.cpp  HeightfieldOperationCPUBrush.h  HeightfieldOperationCPUBrush2.cpp  HeightfieldOperationCPUBrush2.h  HeightfieldOperationCPUErosion.cpp  HeightfieldOperationCPUErosion.h  HeightfieldOperationCPULevel.cpp  HeightfieldOperationCPULevel.h  HeightfieldOperationCPUNoise.cpp  HeightfieldOperationCPUNoise.h  HeightfieldOperationCPUSmooth.cpp  HeightfieldOperationCPUSmooth.h  HeightfieldOperationFactory.cpp  HeightfieldOperationFactory.h  HeightfieldOperationGPUBrush.cpp  (+23 more)
NewEditor/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ogrewidget.cpp  ogrewidget.h  plugins.cfg  resources.cfg  windows.cmake
qtEditor/: AboutDialog.cpp  AboutDialog.h  BrushSettingsWidget.cpp  BrushSettingsWidget.h  ButtonDefinitionDetailsDialog.cpp  ButtonDefinitionDetailsDialog.h  ButtonDefinitionsDialog.cpp  ButtonDefinitionsDialog.h  CMakeLists.txt  ExportImageDialog.cpp  ExportImageDialog.h  ImageFileDialog.cpp  ImageFileDialog.h  ImportImageDialog.cpp  ImportImageDialog.h  MainWindow.cpp  MainWindow.h  OgreWidget.cpp  PresetsWidget.cpp  PresetsWidget.h  PropertiesWidget.cpp  PropertiesWidget.h  ScapeVersion.h.in  StartupSettingsDialog.cpp  StartupSettingsDialog.h  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  brushsettingswidget.ui  buttondefinitiondetailswidget.ui  buttondefinitionswidget.ui  complexproperties.cpp  complexproperties.h  exportimagedialog.ui  imagefiledialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_actions.cpp  (+10 more)
wxEditor/: CMakeLists.txt  MainFrame.cpp  MainFrame.h  OgreditorViewUtils.cpp  OgreditorViewUtils.h  paths.cpp  paths.h  renderpanel.cpp  renderpanel.h  wxOgreditor.cpp  wxOgreditor.h  wxOgreditor.vcxproj  wxOgreditor.vcxproj.filters  wxhelperfunctions.cpp  wxhelperfunctions.h
(+106 files in other folders)
